Add second endpoint for CM Logs (date range)
